--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.24.0",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.31",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-element-plus": "^2.13.14",
+    "vue-router": "^4.0.0-0",
+    "vue-stripe-elements-plus": "^0.3.2",
+    "vue3-apexcharts": "^1.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
