--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.24.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.31",
+    "firebase": "^8.2.7",
     "vue": "^3.0.0",
     "vue-element-plus": "^2.13.14",
     "vue-router": "^4.0.0-0",
