--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.5.11",
     "apexcharts": "^3.24.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
